--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: cachix/install-nix-action@v31
-      - run: "colmena build"
+      - run: "colmena build --parallel 1"
         shell: nix develop -c bash -e {0}
